[package]
name = "game_client_wow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
log = "*"
chrono = "*"
env_logger = "*"
specs = "*"
specs-derive = "*"
serde_json ="*"
serde = { version = "*", features = ["derive"] }

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf"]
